--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 
         </header>
         <main>
-            <button id="BishBosh">BishBosh</button>
-            <button id="btn">Button</button>
-            <button id="createDivButton">createDivButton</button>
+
             
-            <div id="text">Apple</div>
+            <div>
+                <button id="BishButton">Set Bish Value</button>
+                <input id="SetBish">
+            </div>
+            <div>
+                <button id="BoshButton">Set Bosh Value</button>
+                <input id="SetBosh">
+            </div>
+            <button id="BishBosh">Bish Bosh Console</button>
         </main>
         
         <footer>
