--- a/list.html
+++ b/list.html
@@ -15,23 +15,10 @@
 
             
             <div>
-                <button id="BishButton">Set Bish Value</button>
-                <input id="SetBish">
+                <button id="AddItem">Add Item To List</button>
+                <input id="Item">
             </div>
             <div>
-                <button id="BoshButton">Set Bosh Value</button>
-                <input id="SetBosh">
-            </div>
-            <div>
-                Set Nr of Loops
-                <input id="SetLoopVal">
-            </div>
-            <button id="BishBosh">Bish Bosh Console</button>
-            <div>
-                <ul id="BishBoshList">
-
-                </ul>
-            </div>
         </main>
         
         <footer>
