Added explanation of site

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
     <body>
         <header>
-
+            <h2>Bish-Bosh 2.0</h2>
         </header>
         <main>
 
+            <p>
+                I made this website as part of my education in .NET <br>
+                Bish Bosh is an alternate version of Fizz Buzz
+            </p>
             
             <div>
                 <button id="BishButton">Set Bish Value</button>
@@ -26,7 +30,7 @@
                 Set Nr of Loops
                 <input id="SetLoopVal">
             </div>
-            <button id="BishBosh">Bish Bosh Console</button>
+            <button id="BishBosh">Bish Bosh</button>
             <div>
                 <ul id="BishBoshList">
 
