Style up the list a bit

--- a/list.html
+++ b/list.html
@@ -14,11 +14,15 @@
         <main>
 
             
-            <div>
+            <div id="AddDiv">
                 <button id="AddItem">Add Item To List</button>
                 <input id="Item">
             </div>
             <div>
+                <ul id="ItemList">
+
+                </ul>
+            </div>
         </main>
         
         <footer>
